<resources>
    <string name="app_name">Gaza</string>
    <string name="ID">I D</string>
    <string name="PW">PW</string>
    <string name="Login">로그인</string>
    <string name="Join">회원가입</string>
    <string name="Find">찾기</string>
    <string name="Name">이름</string>
    <string name="Age">나이</string>
    <string name="Phone">휴대폰</string>
    <string name="Email">이메일</string>
    <string name="Gender">성별</string>
    <string name="Send">가입</string>
    <string name="Cancel">취소</string>
    <string name="Check">PW CHECK</string>
    <string name="MyPlan">내여행</string>
    <string name="SharedPlan">공유</string>
    <string name="Manage">설정</string>
    <string name="Make">만들기</string>

    <style name="saveCheck">로그인 정보 저장</style>

    <string name="Add">Add</string>

    <string name="detail"> 세부내용</string>

    <string name="location">장소</string>

    <string name="time">시간</string>

    <string name="budget">예산</string>

    <string name="spentmoney">사용한 금액</string>

    <string name="memo">메모</string>

    <string name="space"> </string>
    <string name="title_activity_maps">Map</string>
</resources>
